fix: change cargo and release action

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
 name = "swc_plugin_remove_data_testid"
 version = "0.1.0"
-edition = "2025"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-swc_core = { version = "0.90.*", features = [
-  "ecma_plugin_transform",
-  "ecma_visit",
-  "ecma_ast",
-  "plugin_transform"
-] }
+swc_core = "0.90.37"
+swc_plugin_macro = "0.9.16"
+
