--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,54 +1,39 @@
-name: Release
+name: Build & Release
 
 on:
   push:
     tags:
-      - "v*"
+      - "v*" # example v1.0.0
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [wasm32-wasi]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Build wasm
-        run: |
-          cargo build --release --target ${{ matrix.target }}
-          mkdir -p wasm
-          cp target/${{ matrix.target }}/release/swc_plugin_remove_data_testid.wasm wasm/
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: wasm
-          path: wasm/
-
-  publish-npm:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: wasm
-          path: wasm
-
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          targets: wasm32-unknown-unknown
+          profile: minimal
+
+      - name: List installed Rust targets
+        run: rustup target list --installed
+
+      - name: Build Rust plugin
+        run: |
+          cargo clean
+          cargo build --release --target wasm32-unknown-unknown
+          mkdir -p wasm
+          cp target/wasm32-unknown-unknown/release/swc_plugin_remove_data_testid.wasm wasm/
 
       - name: Publish to npm
         run: npm publish --access public
