--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "wasm/"
   ],
   "scripts": {
-    "build": "cargo build --release --target wasm32-wasi && mkdir -p wasm && cp target/wasm32-wasi/release/swc_plugin_remove_data_testid.wasm wasm/"
-  },
-  "devDependencies": {}
+    "build": "cargo build --release --target wasm32-unknown-unknown && mkdir -p wasm && cp target/wasm32-unknown-unknown/release/swc_plugin_remove_data_testid.wasm wasm/"
+  }
 }
